[package]
name = "rand-unique"
version = "0.2.1"
edition = "2021"
authors = ["Liam Gray <gmail@liamg.me>"]
description = "A no-std crate for generating random sequences of unique integers in O(1) time."
repository = "https://github.com/hoxxep/rand-unique"
documentation = "https://docs.rs/rand-unique"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["random", "unique", "numbers", "sequence", "integers"]
categories = ["algorithms", "no-std"]
exclude = ["Cargo.lock", "charts/*", ".github"]

[lib]

[[bench]]
name = "bench"
harness = false

[dependencies]
num-traits = "0.2"
rand = { version = "0", default-features = false, optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
is_prime = "2.0"
plotters = "0.3"
statrs = "0.16"

[features]
default = ["rand"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
