[package]
name = "rand-unique"
version = "0.3.0"
edition = "2021"
authors = ["Liam Gray <gmail@liamg.me>"]
description = "A no-std crate for generating random sequences of unique integers in O(1) time."
repository = "https://github.com/hoxxep/rand-unique"
documentation = "https://docs.rs/rand-unique"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["random", "unique", "numbers", "sequence", "integers"]
categories = ["algorithms", "no-std"]
exclude = ["Cargo.lock", "charts/*", ".github", "examples", "benches"]
rust-version = "1.71.0"

[lib]

[[bench]]
name = "bench"
harness = false

[dependencies]
num-traits = "0.2"
rand = { version = "0.10.0", default-features = false, optional = true, features = [
    "sys_rng",
    "thread_rng",
] }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"]}
is_prime = "2.0"
plotters = { version = "0.3", default-features = false, features = ["bitmap_encoder", "bitmap_backend", "histogram", "ttf"] }
statrs = "0.18"

[features]
default = ["rand"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
